--- a/public/style.css
+++ b/public/style.css
@@ -87,33 +87,49 @@ a {
     background-color: #1c2d37;
 }
 #game-canvas{
-    padding-bottom:0;
-    margin-bottom: 0;
-}
-.game-canvas {
+    vertical-align: bottom;
     width: 750px;
-    height: 650px;
+    height: 550px;
     position: relative;
+    overflow: hidden;
+}
+.free {
+    height: 50px;
+    align-self: center;
+    margin-left: 50px;
+}
+.cost{
+    text-align: right;
+}
+#heart {
+    align-content: left;
+    padding-top: 10px;
+}    
+.limit {
+    font-size: 20px;
+    align-self: center;
+}
+
+canvas {
+    margin: 0;
+    padding: 0;
 }
 .notification-banner{
     width: 750px;
-    height: 100px;
+    height: 70px;
     background-color: #1c2d37;
+    padding-top: 30px;
 
 }
 .notification{
-    height: 60px;
-    width: max-content;
-    background-color: #586973;
-    border-radius: 35px;
-    text-align: center;
+    font-size: 35px;
     font-weight: bold;
-    font-size: 30px;
+    text-align: center;
     color: white;
-    margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
+    background-color: #586973;
+    border-radius: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 .chat-background {
     width: 750px;
@@ -145,6 +161,7 @@ table.leaders{
     width: 300px;
     table-layout:fixed;
     border: 1px;
+    white-space: nowrap;
 
 }
 td#icon {
@@ -186,5 +203,17 @@ td.points {
     z-index: 2;
     position: absolute;
     color: white;
+    text-align: center;
+}
 
+.gift-plays{
+    margin-left: 550px;
+    height: 200px;
+    width: 200px;
+    font-size: 40px;
+    font-weight: bold;
+    z-index: 2;
+    position: absolute;
+    color: white;
+    text-align: center;
 }
